--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </div>
             <h4 class="stat-title">My Timeline</h4>
             <div class="timeline">
-                <div class="timeline-item">
+                <!-- <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
@@ -173,7 +173,7 @@
                     <h5>B.E (Electronics Engg.)<span> -V.T.U</span></h5>
                     <p>
                     </p>
-                </div>
+                </div> -->
                 
                 
                 <div class="timeline-item">
