--- a/index.html
+++ b/index.html
@@ -175,7 +175,17 @@
                     </p>
                 </div> -->
                 
-                
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2017 - 2018</p>
+                    <h5>Intern<span> -Emertxe Ltd.</span></h5>
+                    <p>
+                        Added functionalities to the front end to enhance user experience.
+                        Worked as teaching assistant for the course projects and assignments 
+                    </p>
+                </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
@@ -188,17 +198,6 @@
                         Built additional features and unit tested them to enhance the application, resulting in a 20% increase
                         in Load Balancing Capacity of a TCP/IP traffic in Currency Derivatives Order book maintenance.
 
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2017 - 2018</p>
-                    <h5>Intern<span> -Emertxe Ltd.</span></h5>
-                    <p>
-                        Added functionalities to the front end to enhance user experience.
-                        Worked as teaching assistant for the course projects and assignments 
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -225,80 +224,80 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="img/video.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Video Chat</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                                <i class="fa fa-link"></i>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/eshop.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>ECOMMERCE SHOP</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                                <i class="fa fa-link"></i>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port3.jpg" alt="">
+                        <img src="img/admin.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>ADMIN DASHBOARD</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                                <i class="fa fa-link"></i>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port4.jpg" alt="">
+                        <img src="img/map.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>TRAVEL ADVISOR</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                                <i class="fa fa-link"></i>
                             </a>
                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port5.jpg" alt="">
+                        <img src="img/Spotify.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>CLONE:SPOTIFY</h3>
                         <div class="icons">
                             <a href="#" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
                             <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                                <i class="fa fa-link"></i>
                             </a>
                         </div>
                     </div>
