--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
             </div>
             <p class="port-text">
-                Here is some of my work that I've done in various programming languages.
+                Here is some of my work that I've done.
             </p>
             <div class="portfolios">
                 <div class="portfolio-item">
@@ -229,9 +229,6 @@
                     <div class="hover-items">
                         <h3>Video Chat</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
                             <a href="#" class="icon">
                                 <i class="fa fa-link"></i>
                             </a>
@@ -246,9 +243,6 @@
                         <h3>ECOMMERCE SHOP</h3>
                         <div class="icons">
                             <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
                                 <i class="fa fa-link"></i>
                             </a>
                         </div>
@@ -261,9 +255,6 @@
                     <div class="hover-items">
                         <h3>ADMIN DASHBOARD</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
                             <a href="#" class="icon">
                                 <i class="fa fa-link"></i>
                             </a>
@@ -278,9 +269,6 @@
                         <h3>TRAVEL ADVISOR</h3>
                         <div class="icons">
                             <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
                                 <i class="fa fa-link"></i>
                             </a>
                         </div>
@@ -294,33 +282,24 @@
                         <h3>CLONE:SPOTIFY</h3>
                         <div class="icons">
                             <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
                                 <i class="fa fa-link"></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="portfolio-item">
+                <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="img/tic-tac-toe.jpeg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>TIC-TAC-TOE</h3>
                         <div class="icons">
                             <a href="#" class="icon">
-                                <i class="fab fa-github"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
-                            </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-youtube"></i>
+                                <i class="fa fa-link"></i>
                             </a>
                         </div>
                     </div>
-                </div> -->
+                </div> 
                 <!-- <div class="portfolio-item">
                     <div class="image">
                         <img src="img/port7.jpg" alt="">
